force-app/main/default/objects/YS_Document__c/YS_Document__c.object-meta.xml
<CustomObject>
    <label>YS Document</label>
    <nameField>
        <label>YS Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>YS Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>