force-app/main/default/objects/YS_Document__c/fields/IsSigned__c.field-meta.xml
<CustomField>
    <fullName>IsSigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Signed</label>
    <type>Checkbox</type>
</CustomField>