force-app/main/default/objects/YS_Document__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>attachment</fullName>
                <label>Attachment</label>
            </value>
            <value>
                <fullName>signable_document</fullName>
                <label>Signable Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>