force-app/main/default/objects/YS_Document__c/fields/SignatureRequest__c.field-meta.xml
<CustomField>
    <fullName>SignatureRequest__c</fullName>
    <label>Signature Request</label>
    <referenceTo>YS_SignatureRequest__c</referenceTo>
    <relationshipLabel>YS Documents</relationshipLabel>
    <relationshipName>YS_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>