force-app/main/default/objects/YS_Document__c/fields/TotalAnchors__c.field-meta.xml
<CustomField>
    <fullName>TotalAnchors__c</fullName>
    <description>Number of parsed anchors from the document</description>
    <label>Total Anchors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>