force-app/main/default/objects/YS_Document__c/fields/TotalPages__c.field-meta.xml
<CustomField>
    <fullName>TotalPages__c</fullName>
    <description>The document number of pages</description>
    <label>Total Pages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>